# django-review

./: db.sqlite3  docker-compose.yml  init.sql  pyproject.toml
app/: forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_rename_word_column_article_word_count.py  0003_article_status.py
django_review/: asgi.py  settings.py  urls.py  wsgi.py
templates/app/: article_create.html  article_delete.html  article_list.html  article_update.html
