[project]
name = "django-review"
version = "0.1.0"
description = ""
authors = [
    {name = "mike9739",email = "migu_el_39@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "mysqlclient (>=2.2.7,<3.0.0)"
]

[tool.poetry]
packages = [{include = "django_review", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
